k8s/capitalis-ai-dev-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nt-laptop-endpoint
  namespace: capitalis
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
