k8s/capitalis-ai-dev-nt-laptop-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nt-laptop-endpoint
  namespace: capitalis
subsets:
  - addresses:
      - ip: 192.168.2.25
    ports:
      - port: 3000
