k8s/postgraphile-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgraphile-server
  namespace: capitalis
spec:
  selector:
    app: postgraphile-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
