k8s/capitalis-ai-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capitalis-ai-dev
  namespace: capitalis
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/websocket: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dev.capitalis.app
    secretName: capitalis-ai-dev-tls-prod
  rules:
  - host: dev.capitalis.app
    http:
      paths:
      - path: /graphql
        pathType: Exact
        backend:
          service:
            name: postgraphile-dev-server
            port:
              number: 80
      - path: /graphiql
        pathType: Exact
        backend:
          service:
            name: postgraphile-dev-server
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nt-laptop-endpoint
            port:
              number: 80
