k8s/postgraphile-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgraphile-server-ingress
  namespace: capitalis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: demotest.capitalis.app
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: postgraphile-server
            port:
              number: 80
